Bring data to main page

--- a/finalProject_frontend/src/main/resources/templates/CovidStats.html
+++ b/finalProject_frontend/src/main/resources/templates/CovidStats.html
@@ -10,6 +10,10 @@
     <span th:inline="text"> Confirmed Cases: [[${covidstats.confirmed}]]</span><br/>
     <span th:inline="text"> Deaths: [[${covidstats.deaths}]]</span><br/>
     <span th:inline="text"> Active Cases: [[${covidstats.active}]]</span><br/>
+    <span th:inline="text"> Population: [[${covidstats.population}]]</span><br/>
+    <span th:inline="text"> Percent of Population of Confirmed Cases: [[${covidstats.confirmedPercent}]] %</span><br/>
+    <span th:inline="text"> Percent of Population of Active Cases: [[${covidstats.activePercent}]] %</span><br/>
+    <span th:inline="text"> Mortality Percentage of Total Population: [[${covidstats.deathPercent}]] %</span><br/>
     <span th:inline="text"> Recovered: [[${covidstats.recovered}]]</span><br/>
     <span th:inline="text"> Last Updated: [[${covidstats.lastUpdated}]]</span><br/>
 
