--- a/finalProject_frontend/src/main/resources/templates/StatsList.html
+++ b/finalProject_frontend/src/main/resources/templates/StatsList.html
@@ -3,10 +3,15 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Covid-19</title>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
+   integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
+   crossorigin="anonymous"> </link>
 </head>
-<h1>Covid-19 Statistics List</h1>
-<body>
 
+<body>
+<div class="container">
+<div class="jumbotron">
+<h1>Covid-19 Statistics List</h1>
     <span th:inline="text"> [[${stateorcountry}]]: [[${country}]]</span><br/>
 
     <span th:each="stat : ${covidstats}">
@@ -16,6 +21,14 @@
     <span th:inline="text"> Recovered: [[${stat.recovered}]]</span><br/>
     <span th:inline="text"> Last Updated: [[${stat.lastUpdated}]]</span><br/>
     </span>
-
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
+integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
+crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" 
+integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" 
+crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" 
+integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" 
+crossorigin="anonymous"></script>
 </body>
 </html>
